<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="17dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_post_title"
            android:textSize="22sp"
            android:layout_marginBottom="7dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_instrument"
            android:textSize="22sp"
            android:layout_marginBottom="7dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:hint="@string/description"
            android:layout_marginBottom="7dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            app:startIconDrawable="@drawable/ic_baseline_euro_24"
            android:hint="@string/price_per_hour"
            android:layout_marginBottom="7dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="22sp"
            android:hint="@string/date_of_disponibility"
            android:enabled="false"
            android:id="@+id/buttonPickDate"
            app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/displayDate"
                />
        </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/selectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_of_disponiblity"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            />

        <TableLayout
            android:id="@+id/simpleTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_08_00" />
            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_09_00" />
            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_10_00" />
            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_11_00" />
        </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <CheckBox
                    android:id="@+id/checkBox10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_12_00" />
                <CheckBox
                    android:id="@+id/checkBox11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_13_00" />
                <CheckBox
                    android:id="@+id/checkBox12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_14_00" />
                <CheckBox
                    android:id="@+id/checkBox13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_15_00" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <CheckBox
                    android:id="@+id/checkBox14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_16_00" />
                <CheckBox
                    android:id="@+id/checkBox15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_17_00" />
                <CheckBox
                    android:id="@+id/checkBox16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_18_00" />
                <CheckBox
                    android:id="@+id/checkBox17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_19_00" />
            </TableRow>
        </TableLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_post"
        android:layout_marginTop="20dp"/>

    </LinearLayout>
</ScrollView>
