<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/post_info_img"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/profile_picture_of_user"
            />

        <TextView
                android:id="@+id/post_info_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        <TextView
                android:id="@+id/post_info_instrument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instrument"
                android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/post_info_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/post_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_price"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/post_info_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15 €"
                android:textStyle="bold"
                android:textColor="@android:color/holo_green_light"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/post_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginRight="12dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/post_info_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30/06/2020" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/disponibility_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:listitem="@layout/post_info_disponibility" />

        <Button
            android:id="@+id/reserve_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserve"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>