<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_marginHorizontal="15dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/stroke_color"
        app:cardElevation="1dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/post_img"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:contentDescription="@string/profile_image_desc"
                android:src="@drawable/ic_baseline_person_24"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start"
                android:padding="15dp">

                <TextView
                    android:id="@+id/post_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/post_title"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />

                <TextView
                    android:id="@+id/post_instrument"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/post_instument"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"/>

                <TextView
                    android:id="@+id/post_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/post_description"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"                    android:maxLines="2"
                    android:ellipsize = "end"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/post_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/post_price"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/post_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textSize="10sp"
                    android:gravity="end"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/post_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2021/6/30"
                    android:textSize="10sp"
                    android:gravity="end"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>